alteracao do metodo de login na api

--- a/test-twitter-data-extraction.ipynb
+++ b/test-twitter-data-extraction.ipynb
@@ -8,40 +8,60 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import tweepy\n",
-    "from dotenv import load_dotenv"
+    "import json\n",
+    "import tweepy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "51bdb519",
+   "execution_count": 2,
+   "id": "9a8ba43a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['API_KEY', 'API_KEY_SECRET', 'ACCESS_TOKEN', 'ACCESS_TOKEN_SECRET', 'BEARER_TOKEN'])\n"
+     ]
+    }
+   ],
    "source": [
-    "consumer_key =\"\"\n",
+    "# Leitura das chaves\n",
     "\n",
-    "consumer_secret=\"\"\n",
+    "with open(\"keys.txt\",\"r\") as text:\n",
+    "    text = text.read()\n",
+    "    keys = json.loads(text)\n",
     "\n",
-    "access_token=\"\"\n",
-    "\n",
-    "access_token_secret=\"\""
+    "print(keys.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "74485420",
    "metadata": {},
    "outputs": [],
    "source": [
-    "auth = tweepy.OAuth1UserHandler(\n",
-    "  consumer_key, \n",
-    "  consumer_secret, \n",
-    "  access_token, \n",
-    "  access_token_secret\n",
-    ")\n",
-    "api = tweepy.API(auth)"
+    "def creates_api():\n",
+    "    \n",
+    "    auth = tweepy.OAuth1UserHandler(\n",
+    "      keys['API_KEY'], \n",
+    "      keys['API_KEY_SECRET'], \n",
+    "      keys['ACCESS_TOKEN'], \n",
+    "      keys['ACCESS_TOKEN_SECRET'])\n",
+    "    \n",
+    "    return tweepy.API(auth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a16aa7ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api = creates_api()"
    ]
   },
   {
@@ -54,27 +74,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "92f9a7da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_credentials = api.verify_credentials()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7a486300",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "my_credentials = api.verify_credentials()\n",
     "my_credentials"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d19c7ff3",
+   "metadata": {},
+   "source": [
+    "### testando a API com uma busca simples de tweets publicados com a hashtag pantanal"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "86c1732f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"#pantanal\"\n",
+    "locale = \"\"\n",
+    "language = \"pt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "3300d826",
    "metadata": {},
    "outputs": [
@@ -82,93 +113,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esos new olimpistas que ponen La Copa Sudamericana 🤌🏽\n",
+      "O brilho no olho da Maria Bruaca saindo da sua cozinha e conhecendo as belezas do pantanal é emocionante. \n",
+      "A delicadeza dessa cena de libertação de uma mulher a muito oprimida é uma verdadeira obra de arte! Eu tô emocionado.\n",
       "\n",
-      "La Copa Libertadores es todo, la CS un torneo mediocre, dejense de joder https://t.co/ls9Nj74vSy\n",
+      "Eu te amo Mary BruBru, eu te venero #Pantanal 🐆 https://t.co/4AdtEx8iYm\n",
       "=====\n",
-      "⚠️ Eric Faria acaba de revelar no SporTV que a pergunta feita para Paulo Sousa sobre Diego Alves, na coletiva após o jogo da Libertadores, foi encomendada pelo próprio treinador.\n",
-      "\n",
-      "O Flamengo irá emitir um comunicado desmentindo as afirmações de Paulo Sousa.\n",
-      "\n",
-      "📸 Alexandre Vidal https://t.co/EecyNjkcC3\n",
+      "A Guta queria que a mãe “fosse feliz, não revoltada”. Em outras palavras, ela só queria militar. Quando viu que a mudança da mãe também a afetou, mudou de ideia. Aí virou “revolta” #Pantanal\n",
       "=====\n",
-      "@Libertadores @RiverPlate @ColoColo @betfair_col Exitos @RiverPlate ⚪🔴⚽️🇦🇷🏆\n",
+      "Se a Juma parar de falar reiva eu vou matar o Jove. #Pantanal\n",
       "=====\n",
-      "@ClubALoficial Ya, ¿y cuándo se tomará en serio La Libertadores? Los ineptos dirigentes y/o administradores no saben que hasta jugando Sudamericana al quedar en tercer lugar se puede ganar más plata que solo participar por participar.\n",
+      "🌱🐾👅 🔥 elenco de pantys em: brincadeiras bobas e gostosas - a thread. 👅 🔥 🐾  🌱 \n",
+      "\n",
+      "#Pantanal https://t.co/TvJvy4b5iX\n",
       "=====\n",
-      "⚠️ Eric Faria acaba de revelar no SporTV que a pergunta feita para Paulo Sousa sobre Diego Alves, na coletiva após o jogo da Libertadores, foi encomendada pelo próprio treinador.\n",
+      "🌱🐾👅 🔥 elenco de pantys em: brincadeiras bobas e gostosas - a thread. 👅 🔥 🐾  🌱 \n",
       "\n",
-      "O Flamengo irá emitir um comunicado desmentindo as afirmações de Paulo Sousa.\n",
-      "\n",
-      "📸 Alexandre Vidal https://t.co/EecyNjkcC3\n",
+      "#Pantanal https://t.co/TvJvy4b5iX\n",
       "=====\n",
-      "🟩🔝 ¡A un año de la noche en la que Enzo Pérez fue arquero! 🇦🇷🧤\n",
-      "\n",
-      "⚪️🔴 Un día como hoy, pero en 2⃣0⃣2⃣1⃣, el volante jugó lesionado, se paró en el arco y @RiverPlate le ganó 2⃣-1⃣ a #SantaFe en una jornada histórica en el Monumental.\n",
-      "\n",
-      "#GloriaEterna https://t.co/7eOtZol82O\n",
+      "Juma e Jove da Terra 9. #Pantanal https://t.co/IBOjITd7Ws\n",
       "=====\n",
-      "Flamengo decidirá em casa nas Oitavas da Libertadores https://t.co/9ueUijn04L https://t.co/2y8KyzOLfq\n",
-      "=====\n",
-      "A un año de este momento. River Plate recibía a Santa Fe por la Copa Libertadores y, debido a un brote masivo de coronavirus que afectó a todos los porteros, Enzo Pérez decidió atajar. \n",
+      "\"Esquente meu almoço agora.\"\n",
+      "\"Tá lá pra você esquentar...\"\n",
+      "\"Ô BRUACA...\"\n",
+      "\"BRUACA É TUA MÃE QUE LHE BOTOU NO MUNDO.\"\n",
       "\n",
-      "El equipo de Gallardo ganó 2-1 y la actuación del mediocampista quedó para la historia 🧤 https://t.co/mKle1svrEP\n",
+      "Maria Bruaca botou o cropped. #Pantanal https://t.co/LuOZuN7txF\n",
       "=====\n",
-      "📝La Copa Libertadores fue el mejor termómetro para demostrar por qué Cristian Benavente regresó al Perú. Ni de arranque, ni ingresando. Ojalá le alcance para ser regular en la Liga 1.\n",
+      "Maria Bruaca dando aulas e sendo mais revolucionária em meio capítulo, do que a Guta desde que entrou na novela \n",
+      "\n",
+      "A famosa militante de telão, q fala do pai, mas faz igual e não ajuda a mãe em um A dentro de casa \n",
+      "\n",
+      "Simplesmente n tenho paciência \n",
+      "#Pantanal\n",
       "=====\n",
-      "Seloco, eu juro que eu não entendo todo esse clima ruim no Flamengo!\n",
-      "Os caras tão em crise como se seilá, tivessem acabado de perder uma final de Libertadores com um gol na prorrogação\n",
-      "\n",
-      "Doidera https://t.co/so7QX2t8pW\n",
+      "Alcides é filho do jagunço que foi morto e matou o irmão da Juma. Muda é filha do fazendeiro, patrão do tal jagunço, que foi morto pelo pai da Juma. Muda e família foram os mandantes das mortes dos pais da Juma. E tudo isso rolou por culpa da grilagem do Tenório. #Pantanal https://t.co/boBJBnuAr0\n",
       "=====\n",
-      "El último campeón del fútbol peruano y que ha ganado 18 puntos de los últimos 18 posibles en el campeonato nacional pierde ante el último de Brasil.\n",
+      "\"Aconteceu que nao vou ser mais a Bruaca de ninguem.\"\n",
+      "\"Nem sei o que dizer.\"\n",
+      "\"Não lhe perguntei nada. Ocê cuida da sua vida que cuido da minha. Chegou meu barco.\"\n",
+      "\"QUE BARCO?\"\n",
+      "\"Não interessa. Se ocê quiser lava a louça, se não quiser...deixa aí\"\n",
       "\n",
-      "Pena y vergüenza el nivel que dan los equipos peruanos en la Copa Libertadores.\n",
+      "Bruaca 100000 X 0 Guta.#Pantanal https://t.co/B3ZMKcs2LJ\n",
       "=====\n",
-      "⚠️ Eric Faria acaba de revelar no SporTV que a pergunta feita para Paulo Sousa sobre Diego Alves, na coletiva após o jogo da Libertadores, foi encomendada pelo próprio treinador.\n",
+      "to me colocando a par dos capítulos de pantanal aí tava na cena da filó falando “o que será que ela quer aqui?”\n",
       "\n",
-      "O Flamengo irá emitir um comunicado desmentindo as afirmações de Paulo Sousa.\n",
+      "quando minha mãe responde pra tv “jura que não sabe o que ela quer? ela só não veio deitada numa bandeja de presente pra ele porque não teve como”\n",
       "\n",
-      "📸 Alexandre Vidal https://t.co/EecyNjkcC3\n",
+      "rindo #pantanal\n",
       "=====\n",
-      "Hoy estaré entregando tres pines para que disfruten  @AsoDeporCali vs Always Ready por la Copa Libertadores\n",
-      "\n",
-      "Dale RT a este trino y cuéntame cuando fue la primera vez que fuiste al estadio a ver al azucarero por torneo internacional ?\n",
+      "Lembrando que o Alcides NÃO FOI CAPADO NA PRIMEIRA VERSÃO.\n",
+      "No decorrer da novela o Tenório revela isso e tempos depois revela a verdade pro Alcides, pouco tempo antes de morrer:\n",
+      "#Pantanal https://t.co/1cTd3Z0eHS https://t.co/99R1jD2yBr\n",
       "=====\n",
-      "@giovannicarass1 @MauriMalvin11 @OficialCAP @Libertadores Así quedaron ni clasificaron\n",
+      "\"A Bruaca hoje tá cansaaada!\"\n",
+      "\n",
+      "Adorando  essa nova vida do Tenório hahaha 😈\n",
+      "\n",
+      "#Pantanal \n",
+      "#Pantanal1990 https://t.co/X8hzh24L9O\n",
       "=====\n",
-      "🇦🇷🆚🇨🇱 ¡Los números históricos de @RiverPlate y @ColoColo en la CONMEBOL #Libertadores! 💪\n",
+      "Se a Juma parar de falar reiva eu vou matar o Jove. #Pantanal\n",
+      "=====\n",
+      "\"Viro onça quando to com reiva.\"\n",
+      "\"Raiva.\"\n",
+      "\"É reiva ou raiva?\"\n",
+      "\"Raiva, mas prefiro o seu jeito.\"\n",
       "\n",
-      "📈🏆 Hoy juegan en el Monumental por la Fecha 5 del Grupo F y estas son sus estadísticas @betfair_col. ¿Quién ganará?\n",
-      "\n",
-      "#GloriaEterna https://t.co/6fQiRKh9vM\n",
+      "É SOBRE ISSO. #Pantanal https://t.co/Eq8wAOkCf7\n",
       "=====\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "Carregando tweets com o tema Libertadores\n",
-    "\"\"\"\n",
     "\n",
-    "# ---------------------------------------\n",
-    "\n",
-    "\"\"\"\n",
-    "consumer_key = os.environ[\"API_KEY\"]\n",
-    "consumer_secret = os.environ[\"API_KEY_SECRET\"]\n",
-    "access_token = os.environ[\"ACCESS_TOKEN\"]\n",
-    "access_token_secret = os.environ[\"ACCESS_TOKEN_SECRET\"]\n",
-    "\"\"\"\n",
-    "auth = tweepy.OAuth1UserHandler(\n",
-    "  consumer_key, \n",
-    "  consumer_secret, \n",
-    "  access_token, \n",
-    "  access_token_secret\n",
-    ")\n",
-    "\n",
-    "api = tweepy.API(auth)\n",
-    "\n",
-    "tweets = api.search_tweets(\"libertadores\", tweet_mode=\"extended\")\n",
+    "tweets = api.search_tweets(q = query, lang = language, tweet_mode = \"extended\")\n",
     "\n",
     "for tweet in tweets:\n",
     "    try:\n",
@@ -177,6 +196,37 @@
     "    except AttributeError:\n",
     "        print(tweet.full_text)\n",
     "        print(\"=====\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f78305d",
+   "metadata": {},
+   "source": [
+    "### capturando tweets com o uso de cursores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d89870e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "publicacoes = [] #lista para armazenar as bucas\n",
+    "query = '#pantanal' #parametro buscado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "21863b3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for status in tweepy.Cursor(api.search_tweets, q=query, lang=\"pt\",\n",
+    "                            count=50).items(5): # busca 50 tweets em 5 páginas\n",
+    "    publicacoes.append(status)"
    ]
   }
  ],
