Alteracao do methodo de login na api

--- a/test-twitter-data-extraction.ipynb
+++ b/test-twitter-data-extraction.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "74485420",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a16aa7ab",
    "metadata": {},
    "outputs": [],
@@ -74,10 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "92f9a7da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User(_api=<tweepy.api.API object at 0x7fcdd4111e20>, _json={'id': 1527271494379872256, 'id_str': '1527271494379872256', 'name': 'Gustavo', 'screen_name': 'pythonistabr', 'location': 'Dentro da matrix', 'description': 'Apenas um rapaz latino americano tentando extrair dados do twitter.', 'url': None, 'entities': {'description': {'urls': []}}, 'protected': False, 'followers_count': 0, 'friends_count': 4, 'listed_count': 0, 'created_at': 'Thu May 19 12:54:52 +0000 2022', 'favourites_count': 1, 'utc_offset': None, 'time_zone': None, 'geo_enabled': False, 'verified': False, 'statuses_count': 0, 'lang': None, 'contributors_enabled': False, 'is_translator': False, 'is_translation_enabled': False, 'profile_background_color': 'F5F8FA', 'profile_background_image_url': None, 'profile_background_image_url_https': None, 'profile_background_tile': False, 'profile_image_url': 'http://pbs.twimg.com/profile_images/1527275742060584960/lD5m452J_normal.jpg', 'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1527275742060584960/lD5m452J_normal.jpg', 'profile_link_color': '1DA1F2', 'profile_sidebar_border_color': 'C0DEED', 'profile_sidebar_fill_color': 'DDEEF6', 'profile_text_color': '333333', 'profile_use_background_image': True, 'has_extended_profile': True, 'default_profile': True, 'default_profile_image': False, 'following': False, 'follow_request_sent': False, 'notifications': False, 'translator_type': 'none', 'withheld_in_countries': [], 'suspended': False, 'needs_phone_verification': False}, id=1527271494379872256, id_str='1527271494379872256', name='Gustavo', screen_name='pythonistabr', location='Dentro da matrix', description='Apenas um rapaz latino americano tentando extrair dados do twitter.', url=None, entities={'description': {'urls': []}}, protected=False, followers_count=0, friends_count=4, listed_count=0, created_at=datetime.datetime(2022, 5, 19, 12, 54, 52, tzinfo=datetime.timezone.utc), favourites_count=1, utc_offset=None, time_zone=None, geo_enabled=False, verified=False, statuses_count=0, lang=None, contributors_enabled=False, is_translator=False, is_translation_enabled=False, profile_background_color='F5F8FA', profile_background_image_url=None, profile_background_image_url_https=None, profile_background_tile=False, profile_image_url='http://pbs.twimg.com/profile_images/1527275742060584960/lD5m452J_normal.jpg', profile_image_url_https='https://pbs.twimg.com/profile_images/1527275742060584960/lD5m452J_normal.jpg', profile_link_color='1DA1F2', profile_sidebar_border_color='C0DEED', profile_sidebar_fill_color='DDEEF6', profile_text_color='333333', profile_use_background_image=True, has_extended_profile=True, default_profile=True, default_profile_image=False, following=False, follow_request_sent=False, notifications=False, translator_type='none', withheld_in_countries=[], suspended=False, needs_phone_verification=False)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_credentials = api.verify_credentials()\n",
     "my_credentials"
@@ -93,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "86c1732f",
    "metadata": {},
    "outputs": [],
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3300d826",
    "metadata": {},
    "outputs": [
@@ -113,80 +124,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O brilho no olho da Maria Bruaca saindo da sua cozinha e conhecendo as belezas do pantanal é emocionante. \n",
-      "A delicadeza dessa cena de libertação de uma mulher a muito oprimida é uma verdadeira obra de arte! Eu tô emocionado.\n",
-      "\n",
-      "Eu te amo Mary BruBru, eu te venero #Pantanal 🐆 https://t.co/4AdtEx8iYm\n",
+      "\"Teu pai pode ter sido um homi bom, Juma, mas ele matou meu pai!!!!\" (Muda)\n",
+      "\"O QUE OCÊ DISSE?????\" (Juma) #Pantanal https://t.co/ZFeda3nMYa\n",
       "=====\n",
-      "A Guta queria que a mãe “fosse feliz, não revoltada”. Em outras palavras, ela só queria militar. Quando viu que a mudança da mãe também a afetou, mudou de ideia. Aí virou “revolta” #Pantanal\n",
+      "o feminismo da guta não durou um dia sem uma refeição completa feita pela mãe pronta na mesa. impressionante #pantanal\n",
       "=====\n",
-      "Se a Juma parar de falar reiva eu vou matar o Jove. #Pantanal\n",
+      "A reação da Juma 👀 #Pantanal https://t.co/0exlB51yLR\n",
       "=====\n",
-      "🌱🐾👅 🔥 elenco de pantys em: brincadeiras bobas e gostosas - a thread. 👅 🔥 🐾  🌱 \n",
-      "\n",
-      "#Pantanal https://t.co/TvJvy4b5iX\n",
-      "=====\n",
-      "🌱🐾👅 🔥 elenco de pantys em: brincadeiras bobas e gostosas - a thread. 👅 🔥 🐾  🌱 \n",
-      "\n",
-      "#Pantanal https://t.co/TvJvy4b5iX\n",
-      "=====\n",
-      "Juma e Jove da Terra 9. #Pantanal https://t.co/IBOjITd7Ws\n",
-      "=====\n",
-      "\"Esquente meu almoço agora.\"\n",
-      "\"Tá lá pra você esquentar...\"\n",
-      "\"Ô BRUACA...\"\n",
-      "\"BRUACA É TUA MÃE QUE LHE BOTOU NO MUNDO.\"\n",
-      "\n",
-      "Maria Bruaca botou o cropped. #Pantanal https://t.co/LuOZuN7txF\n",
-      "=====\n",
-      "Maria Bruaca dando aulas e sendo mais revolucionária em meio capítulo, do que a Guta desde que entrou na novela \n",
-      "\n",
-      "A famosa militante de telão, q fala do pai, mas faz igual e não ajuda a mãe em um A dentro de casa \n",
-      "\n",
-      "Simplesmente n tenho paciência \n",
+      "A união sinistra entre Juma e Alcides é a única terceira via possível para o Brasil hoje\n",
       "#Pantanal\n",
       "=====\n",
-      "Alcides é filho do jagunço que foi morto e matou o irmão da Juma. Muda é filha do fazendeiro, patrão do tal jagunço, que foi morto pelo pai da Juma. Muda e família foram os mandantes das mortes dos pais da Juma. E tudo isso rolou por culpa da grilagem do Tenório. #Pantanal https://t.co/boBJBnuAr0\n",
-      "=====\n",
-      "\"Aconteceu que nao vou ser mais a Bruaca de ninguem.\"\n",
-      "\"Nem sei o que dizer.\"\n",
-      "\"Não lhe perguntei nada. Ocê cuida da sua vida que cuido da minha. Chegou meu barco.\"\n",
-      "\"QUE BARCO?\"\n",
-      "\"Não interessa. Se ocê quiser lava a louça, se não quiser...deixa aí\"\n",
+      "Ansiosos pra #ThorLoveAndThunder?\n",
       "\n",
-      "Bruaca 100000 X 0 Guta.#Pantanal https://t.co/B3ZMKcs2LJ\n",
-      "=====\n",
-      "to me colocando a par dos capítulos de pantanal aí tava na cena da filó falando “o que será que ela quer aqui?”\n",
+      "Tem PROMO C&amp;A 🥳\n",
       "\n",
-      "quando minha mãe responde pra tv “jura que não sabe o que ela quer? ela só não veio deitada numa bandeja de presente pra ele porque não teve como”\n",
+      "• Ganhe 20% de DESCONTO na 1ª compra CeA: use código de consultor PROMODEAMIGA + cupom NOVOMINHA\n",
       "\n",
-      "rindo #pantanal\n",
-      "=====\n",
-      "Lembrando que o Alcides NÃO FOI CAPADO NA PRIMEIRA VERSÃO.\n",
-      "No decorrer da novela o Tenório revela isso e tempos depois revela a verdade pro Alcides, pouco tempo antes de morrer:\n",
-      "#Pantanal https://t.co/1cTd3Z0eHS https://t.co/99R1jD2yBr\n",
-      "=====\n",
-      "\"A Bruaca hoje tá cansaaada!\"\n",
+      "❗️Se NÃO for 1ª compra, ganhe 10% OFF usando SÓ código de consultor PROMODEAMIGA\n",
       "\n",
-      "Adorando  essa nova vida do Tenório hahaha 😈\n",
+      "#PowerCouple #pantanal #StaySelcaDay Mari lima https://t.co/BnNL0QFV3F\n",
+      "=====\n",
+      "o feminismo da guta não durou um dia sem uma refeição completa feita pela mãe pronta na mesa. impressionante #pantanal\n",
+      "=====\n",
+      "Alanis Guillen quebra o silêncio e revela se está namorando Jesuíta Barbosa. Confira! \n",
+      "\n",
+      "#famosos #pantanal #juma #jove \n",
+      "\n",
+      "https://t.co/IYpONjtZCL https://t.co/nSpF0h71OX\n",
+      "=====\n",
+      "Jove decide virar peão de verdade: vai tocar comitiva com Zé Lucas e brigar com Tadeu #Pantanal https://t.co/KkJqMNDmkR https://t.co/JsoAQNNiVn\n",
+      "=====\n",
+      "\"Pra mim acabou, Tenório. Se quiser comida na mesa, suas roupas passadinhas, ocê contrata uma empregada. Eu nao vou mais ser a sua Bruaca. Nem sua nem de ninguém. Pode ficar por lá pq nessa casa ocê não faz a menor falta.\" \n",
+      "\n",
+      "Maria Bruaca LENDÁRIA. #Pantanal https://t.co/H2ioXqFzxl\n",
+      "=====\n",
+      "Fala muda!\n",
       "\n",
       "#Pantanal \n",
-      "#Pantanal1990 https://t.co/X8hzh24L9O\n",
+      "#Pantanal1990 https://t.co/jx17MqIRVR\n",
       "=====\n",
-      "Se a Juma parar de falar reiva eu vou matar o Jove. #Pantanal\n",
-      "=====\n",
-      "\"Viro onça quando to com reiva.\"\n",
-      "\"Raiva.\"\n",
-      "\"É reiva ou raiva?\"\n",
-      "\"Raiva, mas prefiro o seu jeito.\"\n",
+      "\"Pra mim acabou, Tenório. Se quiser comida na mesa, suas roupas passadinhas, ocê contrata uma empregada. Eu nao vou mais ser a sua Bruaca. Nem sua nem de ninguém. Pode ficar por lá pq nessa casa ocê não faz a menor falta.\" \n",
       "\n",
-      "É SOBRE ISSO. #Pantanal https://t.co/Eq8wAOkCf7\n",
+      "Maria Bruaca LENDÁRIA. #Pantanal https://t.co/H2ioXqFzxl\n",
+      "=====\n",
+      "Mariana recebe friamente a notícia da morte de Madeleine.\n",
+      "\n",
+      "#Pantanal \n",
+      "#Pantanal1990 https://t.co/0tsDailxvR\n",
+      "=====\n",
+      "eu torço por Maria bruaca como se fosse minha amiga próxima. toda vez que Tenório fica sem comida ou guta progressista de apartamento fica chateada porque tá sem almoço eu vibro #pantanal\n",
+      "=====\n",
+      "o feminismo da guta não durou um dia sem uma refeição completa feita pela mãe pronta na mesa. impressionante #pantanal\n",
+      "=====\n",
+      "Nathália Timberg dando um show nessa cena.\n",
+      "\n",
+      "#Pantanal \n",
+      "#Pantanal1990 https://t.co/HSrZlkDczE\n",
       "=====\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "tweets = api.search_tweets(q = query, lang = language, tweet_mode = \"extended\")\n",
     "\n",
     "for tweet in tweets:\n",
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "8d89870e",
    "metadata": {},
    "outputs": [],
@@ -219,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "21863b3f",
    "metadata": {},
    "outputs": [],
@@ -228,6 +226,14 @@
     "                            count=50).items(5): # busca 50 tweets em 5 páginas\n",
     "    publicacoes.append(status)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6870b1eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
