refatoracao do script

--- a/test-twitter-data-extraction.ipynb
+++ b/test-twitter-data-extraction.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "git é uma merda! srsrs\n",
+    "GIT É UMA MEEERRRRDAAAA\n",
     "\"\"\""
    ]
   },
@@ -79,7 +79,7 @@
    "id": "eddde9ce",
    "metadata": {},
    "source": [
-    "#### Verificação das credenciais"
+    "### Verificação das credenciais"
    ]
   },
   {
@@ -92,7 +92,7 @@
     "\"\"\"\n",
     "my_credentials = api.verify_credentials()\n",
     "my_credentials\n",
-    "\"\"\";"
+    "\"\"\""
    ]
   },
   {
@@ -111,10 +111,18 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "query = \"burguer king\"\n",
+    "query = \"pantanal\"\n",
     "locale = \"\"\n",
     "language = \"pt\"\n",
-    "\"\"\";"
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330c6a5b",
+   "metadata": {},
+   "source": [
+    "### Usando o método search"
    ]
   },
   {
@@ -134,7 +142,7 @@
     "    except AttributeError:\n",
     "        print(tweet.full_text)\n",
     "        print(\"=====\")\n",
-    "\"\"\";"
+    "\"\"\""
    ]
   },
   {
@@ -143,26 +151,6 @@
    "metadata": {},
    "source": [
     "## capturando tweets com o uso de cursores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "809f4fe1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#help(tweepy.Cursor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "779d0232",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#help(tweepy.OAuth1UserHandler)"
    ]
   },
   {
@@ -265,45 +253,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "684165ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "21863b3f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for restaurante in restaurantes:\n",
-    "#     query = restaurante\n",
-    "    \n",
-    "#     try:\n",
-    "#         for status in tweepy.Cursor(api.search_tweets, q = query, lang=\"pt\",\n",
-    "#                                     count=200,exclude_replies=True, include_rts=False).items(10000):\n",
-    "#             publicacoes.append(status)\n",
-    "#     except:\n",
-    "#         print(\"limite de requisicao estourado!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "id": "dde53399",
    "metadata": {},
@@ -325,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "id": "f577cf22",
    "metadata": {},
    "outputs": [],
@@ -355,6 +304,7 @@
    "source": [
     "def cria_data_frame():\n",
     "    from pandas import DataFrame\n",
+    "    \n",
     "    id_autor, texto, data_publicacao = [], [], []\n",
     "\n",
     "    for pub in publicacoes:\n",
@@ -362,9 +312,20 @@
     "        texto.append(pub.text)\n",
     "        data_publicacao.append(pub.created_at)\n",
     "    \n",
-    "    main_data = DataFrame({\"id_autor\":id_autor, \"texto\":texto , \"data_publicacao\":data_publicacao })\n",
+    "    main_data = DataFrame({\"id_autor\":id_autor, \"texto\":texto ,\n",
+    "                           \"data_publicacao\":data_publicacao })\n",
     "    \n",
     "    return main_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7f5b223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = cria_data_frame()"
    ]
   },
   {
@@ -456,7 +417,6 @@
     }
    ],
    "source": [
-    "df = cria_data_frame()\n",
     "df.head()"
    ]
   },
@@ -481,24 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "id": "7a119f27",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Timestamp('2022-05-23 08:14:36+0000', tz='UTC'),\n",
-       " Timestamp('2022-05-31 19:56:38+0000', tz='UTC'))"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.data_publicacao.min(), df.data_publicacao.max()"
+    "# df.data_publicacao.min(), df.data_publicacao.max()"
    ]
   }
  ],
