upload de dados crus

--- a/test-twitter-data-extraction.ipynb
+++ b/test-twitter-data-extraction.ipynb
@@ -21,7 +21,8 @@
    "source": [
     "import os\n",
     "import json\n",
-    "import tweepy"
+    "import tweepy\n",
+    "# import pandas as pd"
    ]
   },
   {
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330c6a5b",
+   "id": "e9723772",
    "metadata": {},
    "source": [
     "### Usando o método search"
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "8edb43cb",
    "metadata": {},
    "outputs": [],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "a79609f3",
    "metadata": {},
    "outputs": [],
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "2a236994",
    "metadata": {},
    "outputs": [],
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "e8647e2e",
    "metadata": {},
    "outputs": [],
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "47091a52",
    "metadata": {},
    "outputs": [
@@ -229,9 +230,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
-      "limite de requisicao estourado!\n",
       "limite de requisicao estourado!\n",
       "limite de requisicao estourado!\n",
       "limite de requisicao estourado!\n",
@@ -253,17 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "dde53399",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17597"
+       "16669"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "f270e860",
    "metadata": {},
    "outputs": [],
@@ -320,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e7f5b223",
+   "execution_count": 12,
+   "id": "8ff07a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "fa156b73",
    "metadata": {},
    "outputs": [
@@ -363,33 +361,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1531725294154960896</td>\n",
-       "      <td>Era só um bk, subway ou sushizinho agr</td>\n",
-       "      <td>2022-05-31 19:52:22+00:00</td>\n",
+       "      <td>1534617246508752896</td>\n",
+       "      <td>Hj comi o bibsfirra burguer do habibs:\\nAprese...</td>\n",
+       "      <td>2022-06-08 19:23:58+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1531725243471040513</td>\n",
-       "      <td>Mudando de pau pra casete o Vontade de comer u...</td>\n",
-       "      <td>2022-05-31 19:52:10+00:00</td>\n",
+       "      <td>1534616823576023045</td>\n",
+       "      <td>Orando pra Deus reestabelecer a gargantinha do...</td>\n",
+       "      <td>2022-06-08 19:22:17+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1531725045541789696</td>\n",
-       "      <td>vontade de subway</td>\n",
-       "      <td>2022-05-31 19:51:23+00:00</td>\n",
+       "      <td>1534615082650456067</td>\n",
+       "      <td>@gabrielaanaaa Kkkkk ah para rainha do Habibs</td>\n",
+       "      <td>2022-06-08 19:15:22+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1531724677365776385</td>\n",
-       "      <td>Subway o comida criolla?</td>\n",
-       "      <td>2022-05-31 19:49:55+00:00</td>\n",
+       "      <td>1534611991133921281</td>\n",
+       "      <td>Eu tô muito desacreditado que paguei 15.90 num...</td>\n",
+       "      <td>2022-06-08 19:03:05+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1531723997133553672</td>\n",
-       "      <td>a cada decepção os pontos do Subway surf aumenta</td>\n",
-       "      <td>2022-05-31 19:47:13+00:00</td>\n",
+       "      <td>1534610220114141185</td>\n",
+       "      <td>Eu tô com muita vontade de ir num rodízio de e...</td>\n",
+       "      <td>2022-06-08 18:56:02+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -397,21 +395,21 @@
       ],
       "text/plain": [
        "              id_autor                                              texto  \\\n",
-       "0  1531725294154960896             Era só um bk, subway ou sushizinho agr   \n",
-       "1  1531725243471040513  Mudando de pau pra casete o Vontade de comer u...   \n",
-       "2  1531725045541789696                                  vontade de subway   \n",
-       "3  1531724677365776385                           Subway o comida criolla?   \n",
-       "4  1531723997133553672   a cada decepção os pontos do Subway surf aumenta   \n",
+       "0  1534617246508752896  Hj comi o bibsfirra burguer do habibs:\\nAprese...   \n",
+       "1  1534616823576023045  Orando pra Deus reestabelecer a gargantinha do...   \n",
+       "2  1534615082650456067      @gabrielaanaaa Kkkkk ah para rainha do Habibs   \n",
+       "3  1534611991133921281  Eu tô muito desacreditado que paguei 15.90 num...   \n",
+       "4  1534610220114141185  Eu tô com muita vontade de ir num rodízio de e...   \n",
        "\n",
        "            data_publicacao  \n",
-       "0 2022-05-31 19:52:22+00:00  \n",
-       "1 2022-05-31 19:52:10+00:00  \n",
-       "2 2022-05-31 19:51:23+00:00  \n",
-       "3 2022-05-31 19:49:55+00:00  \n",
-       "4 2022-05-31 19:47:13+00:00  "
+       "0 2022-06-08 19:23:58+00:00  \n",
+       "1 2022-06-08 19:22:17+00:00  \n",
+       "2 2022-06-08 19:15:22+00:00  \n",
+       "3 2022-06-08 19:03:05+00:00  \n",
+       "4 2022-06-08 18:56:02+00:00  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,23 +428,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "251e5598",
    "metadata": {},
    "outputs": [],
    "source": [
     "# separando as colunas pot \\t para não dar problemar ao carregar os dados em um novo df\n",
-    "df.to_csv(\"raw-data/coleta-1.csv\", sep=\"\\t\", index=False)"
+    "df.to_csv(\"raw-data/coleta-2.csv\", sep=\"\\t\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "7a119f27",
+   "execution_count": 8,
+   "id": "6779a837",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.data_publicacao.min(), df.data_publicacao.max()"
+    "# test de carregamento\n",
+    "# df = pd.read_csv(\"raw-data/coleta-1.csv\", delimiter=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7a119f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Timestamp('2022-05-31 01:43:41+0000', tz='UTC'),\n",
+       " Timestamp('2022-06-08 19:27:52+0000', tz='UTC'))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.data_publicacao.min(), df.data_publicacao.max()"
    ]
   }
  ],
